--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/style.css" />
-    <title>벌레를 피해라!</title>
+    <title>모기를 잡아라!</title>
   </head>
   <body>
     <section>
+      <button class="sound">🔊</button>
+      <button class="muted">🔇</button>
       <img class="bg" src="./img/background.png" alt="background" />
+      <div class="tutorial">
+        <span>Hit </span>sneaky mosquitoes
+        <img src="./img/mosquito.png" alt="mosquito" width="50px" />
+        <span>aside watermelons!</span>
+      </div>
       <button class="start__button">Start</button>
       <button class="restart__button">Restart</button>
       <div class="time">Time 00:08</div>
