--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="game__sound">🔊</button>
         <button class="game__muted">🔇</button>
         <div class="game__time">
-          <span>Time </span><span class="game__timer">00:08</span>
+          <span>Time </span><span class="game__timer"></span>
         </div>
         <div class="game__count"></div>
         <button class="game__pause">⏸</button>
