--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <section class="game">
       <div class="game__header">
-        <button class="game__sound">🔊</button>
-        <button class="game__muted">🔇</button>
+        <button class="game__sound game__sound__on">🔊</button>
+        <button class="game__sound game__sound__off clear">🔇</button>
         <div class="game__time">
           <span>Time </span><span class="game__timer"></span>
         </div>
