--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/favicon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
@@ -20,8 +21,8 @@
     <section class="game">
       <div class="game__header">
         <div class="game__button-box">
-          <button class="game__sound">🔊</button>
-          <button class="game__sound clear">🔇</button>
+          <i class="fa-solid fa-volume-low game__sound"></i>
+          <i class="fa-solid fa-volume-xmark game__sound clear"></i>
         </div>
         <div class="game__time">
           <span>Time </span><span class="game__timer"></span>
