--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
           <span>Time </span><span class="game__timer"></span>
         </div>
         <div class="game__count"></div>
-        <button class="game__pause">
-          <i class="fa-solid fa-circle-pause"></i>
-        </button>
+        <i class="fa-solid fa-circle-pause game__pause"></i>
       </div>
       <div class="game__target-container"></div>
     </section>
